--- a/.github/workflows/lerna-release-workflow.yml
+++ b/.github/workflows/lerna-release-workflow.yml
@@ -34,4 +34,6 @@ jobs:
         run: npm ci
 
       - name: Create Github release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run version
