--- a/.github/workflows/lerna-release-workflow.yml
+++ b/.github/workflows/lerna-release-workflow.yml
@@ -1,4 +1,4 @@
-name: Lerna release workflow
+name: Release with Lerna
 
 on:
   push:
@@ -8,32 +8,33 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x]
-
     steps:
       - uses: actions/checkout@v2
-
-      - name: Use Nodejs ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 12
+      - run: npm ci
 
-      - name: Cache Nodejs dependencies
-        uses: actions/cache@v1
+  release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
-          path: ~/.npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Create Github release
+          node-version: 12
+      - run: git config user.email "medhi.redjem@gmail.com"
+      - run: git config user.name  "Medhi REDJEM"
+      - run: npm run version
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run version
+
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: echo 'npm run publish' # npm run publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
