--- a/lerna.json
+++ b/lerna.json
@@ -5,11 +5,11 @@
   "version": "independent",
   "command": {
     "publish": {
-      "conventionalCommits": true,
       "registry": "http://npmserver:4873"
     },
     "version": {
-      "createRelease": "github",
+      "githubRelease": true,
+      "conventionalCommits": true,
       "message": "chore(release): %v [skip ci]"
     }
   }
