--- a/.github/workflows/release-and-publish.yml
+++ b/.github/workflows/release-and-publish.yml
@@ -26,7 +26,7 @@ jobs:
           git config user.email "medhi.redjem@gmail.com"
           git config user.name  "Medhi REDJEM"
       - run: npm ci
-      - run: npm run version -- --yes
+      - run: npm run version -- --yes --loglevel=debug
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: echo 'npm run publish -- --yes from-package' # npm run publish -- --yes from-package
